Bug 448554 - Authentication dialog does not play sound effect set in "Notifications / Events"
Summary: Authentication dialog does not play sound effect set in "Notifications / Events"
Status: RESOLVED FIXED
Alias: None
Product: policykit-kde-agent-1
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.4
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 502763 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-15 21:33 UTC by Victor
Modified: 2025-04-27 13:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Settings window containing the mentioned event options. (41.30 KB, image/png)
2022-01-15 21:33 UTC, Victor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor 2022-01-15 21:33:14 UTC
Created attachment 145512 [details]
Settings window containing the mentioned event options.

SUMMARY
Any "Authentication Required" popup dialog that appears when a program needs administrative privileges does not play the audio set in "System Settings → Notifications → Applications → Authentication System → Configure Events... → Play a sound".


STEPS TO REPRODUCE
1. Set any audio file as the sound effect for PolicyKit (follow the path of menus listed in the first paragraph).
2. Trigger an "Authentication Required dialog. For example, starting up the KDE Partition Manager or modifying packages.


OBSERVED RESULT
The popup appears as usual, however the event sound effect previously cannot be heard.


EXPECTED RESULT
The sound effect playing upon the dialog popping up.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro 21.2.1
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Note that events for other programs, such as network connections, volume up/down, screenshots, etc. do follow their settings.
Comment 1 The Feren OS Dev 2025-04-23 14:14:08 UTC
*** Bug 502763 has been marked as a duplicate of this bug. ***
Comment 2 The Feren OS Dev 2025-04-23 14:14:58 UTC
Passed the confirmed status to this issue given the duplicate was marked as confirmed
Comment 3 Bug Janitor Service 2025-04-23 14:32:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/polkit-kde-agent-1/-/merge_requests/53
Comment 4 Nate Graham 2025-04-27 13:25:17 UTC
Git commit 40daa6866264a51dfc15ae4487e6a3883a455147 by Nate Graham, on behalf of Bogdan Cvetanovski Pašalić.
Committed on 27/04/2025 at 13:25.
Pushed by ngraham into branch 'master'.

Add notification sound to authentication dialog

This commit fixes the notification event not activating when the
authentication dialog window appears, causing it to not play a sound.

Now, it plays `dialog-warning-auth`, which currently falls back to
`dialog-warning` if the desires sound is not found in the active sound
theme.
FIXED-IN: 6.4.0

M  +1    -0    .kde-ci.yml
M  +3    -1    CMakeLists.txt
M  +4    -1    QuickAuthDialog.cpp
R  +2    -1    polkit-kde-authentication-agent-1.notifyrc [from: policykit1-kde.notifyrc - 099% similarity]

https://invent.kde.org/plasma/polkit-kde-agent-1/-/commit/40daa6866264a51dfc15ae4487e6a3883a455147