Add notification sound to authentication dialog

This commit fixes the notification event not activating when the
authentication dialog window appears, causing it to not play a sound.

Now, it plays `dialog-warning-auth`, which currently falls back to
`dialog-warning` if the desires sound is not found in the active sound
theme.

BUG: 448554
FIXED-IN: 6.4.0